see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Feb-2012 Jean-Marie Simonet
 #$ [#27716] Saving 'Start Publishing' updates 'Finish Publishing' not 'Start Publishing'. Thanks John.
 # [#27902] *mod_languages html 5 validation error empty action attribute. Thanks Danilo.
 # [#27410] Don't use DS anymore. Thanks Rouven
 
12-Feb-2012 Jean-Marie Simonet
 # [#28028] *Entering an article link via the Article button=>links broken in SEF. Thanks Rouven.

10-Feb-2012 Jean-Marie Simonet
 + Adding index.html in new docs folder
 # [#27568] Remove the use of all deprecated functions (except JRequest and JException) in the installation. Thanks Rouven
 # [#28007] Languages overrides not showing content when showing is set to all. Thanks Patrick Alt
 # [#28021] mod_login module does not HTML escape the user's name. Thanks Vittal
 $ [#27824] Offline image overflow

07-Feb-2012 Jean-Marie Simonet
 # [#27992] Beez 2.0 has one css file still hardcoded with template name. Thanks Andrea
 + Adding index.html in new build folder
 # Correcting EOL for some adapters files (Issue posted on platform)
 # [#27990] Captcha Typo .Thanks Phil and Ofer.
 # [#27975] smart search author not translated.
 + Adding us flag to mod_languages

07-Feb-2012 Mark Dexter
 + Add build script to repository

06-Feb-2012 Jean-Marie Simonet
# [#27784] Use less deprecated functions. Thanks Rouven

05-Feb-2012 Mark Dexter
 # [#27907] Sitename not escaped
 # [#27802] The package installer insert two database entries on templates
 # [#27923] com_menus item model calls non-existing method
 # [#27843] media.php jInsertFieldValue

04-Feb-2012 Christophe Demko