@@ -31,6 +31,7 @@ abstract class modArticlesPopularHelper
 		$model->setState('list.start', 0);
 		$model->setState('list.limit', (int) $params->get('count', 5));
 		$model->setState('filter.published', 1);
+		$model->setState('filter.featured', $params->get('show_front', 1) == 1 ? 'show' : 'hide');
 
 		// Access filter
 		$access = !JComponentHelper::getParams('com_content')->get('show_noauth');
